--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
+    "autoprefixer": "^10.4.23",
     "builtin-modules": "3.3.0",
     "esbuild": "0.17.3",
     "obsidian": "latest",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "tslib": "2.4.0",
     "typescript": "4.7.4"
   },
